<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:background="@drawable/zong"
        android:fadingEdge="vertical"
        android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="263dp"
        android:layout_marginTop="50dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.work.app.MainActivity" >

        <LinearLayout
            android:id="@+id/infolist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/myInfo"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:layout_below="@id/myInfo" >

            <ImageView
                android:id="@+id/mytouxiang"
                android:layout_marginLeft="30dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
             />

            <TextView
                android:id="@+id/myname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
			
        </LinearLayout>

        <TextView
            android:id="@+id/myInfo"
			android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#54c6ff"
            android:visibility="gone"
            android:textStyle="bold" />
 			
 		<TextView
            android:id="@+id/myHomework"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/infolist"
            android:layout_marginTop="30dp"
            android:text="@string/myHomework"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#54c6ff"
            android:textStyle="bold" />
 		
        <ListView
            android:id="@+id/workList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/myHomework"
            android:layout_below="@id/myHomework"
            android:listSelector="@android:color/transparent"
            android:divider="@drawable/reader_item_divider"
          />
     
        <TextView
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/workList"
            android:layout_centerVertical="true"
            android:text="@string/test"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#54c6ff"
            
            android:textStyle="bold" />

        <ListView
            android:id="@+id/testList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/workList"
            android:layout_below="@id/test"
            android:ellipsize="marquee"
            android:choiceMode="singleChoice" >
        </ListView>

        <TextView
            android:id="@+id/lesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/test"
            android:layout_alignStart="@+id/test"
            android:layout_below="@+id/testList"
            android:text="@string/lesson"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#54c6ff"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/testList"
            android:layout_below="@+id/lesson"
            android:shrinkColumns="1"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/keChenMing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:text="@string/keChenMing"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="center"
                    android:text="@string/address"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>
        </TableLayout>

    </RelativeLayout>
    </ScrollView>